# turnleaf

./: .gitignore  COMPATIBILITY.md  CONTRIBUTING.md  PLAN.md  README.md  package-lock.json  package.json  pom.xml
.github/ISSUE_TEMPLATE/: compatibility-report.yml  config.yml  crash-report.yml
.github/workflows/: release.yml
engine/: dependency-reduced-pom.xml  pom.xml
engine/src/main/java/dev/foliaondemand/engine/: FoliaMiner.java  Indexer.java  JarTools.java  Main.java  Transform.java
scripts/: bundle.mjs  fake-stale-server.cjs  fetch-tools.mjs  stage.mjs  test-analyze.ts  test-meta.ts  test-parse.ts  test-scrub.ts
shim-runtime/: dependency-reduced-pom.xml  pom.xml
src/: cli.ts  env.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  localhost.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/ai/: patches.ts  provider.test.ts  provider.ts  repair.test.ts  repair.ts  tier3.ts
src/analyze/: regionCatalog.ts  sharedState.ts
src/convert/: convert.ts  descriptor.ts  generateShim.ts  migrate.ts  pipeline.test.ts  pipeline.ts  redirects.ts
src/corpus/: corpus.ts
src/engine/: client.ts
src/gui/: server.ts
src/gui/public/: app.js  index.html  loading.html  style.css
src/report/: console.ts
src/rules/: catalog.json  region-guarded.generated.json  region-subtypes.generated.json
src/scan/: scanner.test.ts  scanner.ts
src/util/: diff.test.ts  diff.ts  scrub.test.ts  scrub.ts  versions.test.ts  versions.ts
src/verify/: harness.ts
tests/probe-plugin/: pom.xml
(+6 files in other folders)
